<resources>
    <string name="app_name">Matriks App</string>
    <string name="pengurangan">Pengurangan</string>
    <string name="matriks_a">Matriks A</string>
    <string name="min">-</string>
    <string name="matriks_b">Matriks B</string>
    <string name="hasil">Hasil</string>
    <string name="hitung">Hitung</string>
    <string name="back">back</string>
    <string name="matriks_app">Matriks App</string>
    <string name="ilustration">ilustration</string>
    <string name="penjumlahan">Penjumlahan</string>
    <string name="a_b">A + B</string>
    <string name="min_a_b">A - B</string>
    <string name="perkalian">Perkalian</string>
    <string name="a_x_b">A x B</string>
    <string name="determinan">Determinan</string>
    <string name="a">|A|</string>
    <string name="plus">+</string>
    <string name="x">x</string>
</resources>
