<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/matriks_app"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_undraw_calculator_0evy"
        android:contentDescription="@string/ilustration" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_dasboard"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingTop="10dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/penjumlhan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="Penjumlahan"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/bg_item"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_icons8_plus"
                        android:contentDescription="@string/ilustration" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:gravity="center"
                        android:text="@string/penjumlahan"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:gravity="center"
                        android:text="@string/a_b"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pengurangan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="Pengurangan"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/bg_item"
                    android:gravity="center"
                    android:onClick="Pengurangan"
                    android:orientation="vertical"
                    android:padding="8dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_icons8_minus"
                        android:contentDescription="@string/ilustration" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:gravity="center"
                        android:text="@string/pengurangan"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:gravity="center"
                        android:text="@string/min_a_b"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/perkalian"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="Perkalian"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/bg_item"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/imageView31"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_icons8_multiplacation"
                        android:contentDescription="@string/ilustration" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:gravity="center"
                        android:text="@string/perkalian"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:gravity="center"
                        android:text="@string/a_x_b"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/determinan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="Determinan"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/bg_item"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/imageView33"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_icons8_determinan"
                        android:contentDescription="@string/ilustration" />

                    <TextView
                        android:id="@+id/textView43"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:gravity="center"
                        android:text="@string/determinan"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView53"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:gravity="center"
                        android:text="@string/a"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>